div alignment fix

--- a/Front/css/brackets.css
+++ b/Front/css/brackets.css
@@ -14,7 +14,7 @@ body {
     position: absolute;
     padding: 10px;
     width: 70%;
-    left: 15%;
+    left: 10%;
     top: 15%;
 }
 
